feat(cloudflare): add deploy scaffolding and frontend edge tooling

--- a/frontend-web/.env.example
+++ b/frontend-web/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_IMMCAD_FRONTEND_REDESIGN_ENABLED=true
 NEXT_PUBLIC_IMMCAD_SHOW_OPERATIONS_PANELS=true
 IMMCAD_API_BASE_URL=https://api.example.com
 IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
+IMMCAD_ALLOW_PROXY_SCAFFOLD_FALLBACK=false
