--- a/frontend-web/.gitignore
+++ b/frontend-web/.gitignore
@@ -1,9 +1,16 @@
 node_modules/
 .next/
+.open-next/
 out/
 coverage/
+playwright-report/
+test-results/
 *.tsbuildinfo
+.wrangler/
 .vercel
 .env
 .env.*
 !.env.example
+.dev.vars
+.dev.vars.*
+!.dev.vars.example
