--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,4 +59,19 @@ follow_imports = "skip"
 files = [
     "backend-vercel/api/index.py",
     "scripts/validate_backend_vercel_source_sync.py",
+    "src/immcad_api/main.py",
+    "src/immcad_api/settings.py",
+    "src/immcad_api/schemas.py",
+    "src/immcad_api/api/routes/cases.py",
+    "src/immcad_api/policy/compliance.py",
+    "src/immcad_api/services/case_search_service.py",
+    "src/immcad_api/services/chat_service.py",
+    "src/immcad_api/sources/official_case_law_client.py",
+    "src/immcad_api/sources/source_registry.py",
+    "tests/test_api_scaffold.py",
+    "tests/test_case_search_service.py",
+    "tests/test_chat_service.py",
+    "tests/test_export_policy_gate.py",
+    "tests/test_official_case_law_client.py",
+    "tests/test_settings.py",
 ]
