--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -55,7 +55,7 @@ jobs:
           CANLII_API_KEY: quality-gate-canlii-key
           EXPORT_POLICY_GATE_ENABLED: "true"
           ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
-          CITATION_TRUSTED_DOMAINS: laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org
+          CITATION_TRUSTED_DOMAINS: laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org,decisions.scc-csc.ca,decisions.fct-cf.gc.ca,decisions.fca-caf.gc.ca
         run: |
           uv run python - <<'PY'
           import os
@@ -82,11 +82,11 @@ jobs:
       - name: Install frontend dependencies
         run: npm ci --prefix frontend-web
 
-      - name: Frontend typecheck
-        run: npm run typecheck --prefix frontend-web
-
       - name: Frontend build
         run: npm run build --prefix frontend-web
+
+      - name: Frontend typecheck
+        run: npm run typecheck --prefix frontend-web
 
       - name: Frontend contract tests
         env:
@@ -95,6 +95,11 @@ jobs:
 
       - name: Lint API and tests scope
         run: uv run ruff check src/immcad_api tests
+
+      - name: Backend typecheck
+        env:
+          PYTHONPATH: src
+        run: uv run mypy
 
       - name: Run unit tests
         env:
