feat(cloudflare): add edge contract preflight gates
- add deterministic edge-proxy contract checker and release preflight script

- enforce free-plan + edge contract checks in quality/release/proxy deploy workflows

- emit x-trace-id on proxy success responses and keep legacy header continuity

- add regression tests and update release runbook/known-issues tracking

Validation:

- make quality

- npm run test --prefix frontend-web

- npm run typecheck --prefix frontend-web

- SKIP_CLOUDFLARE_FREE_PLAN_CHECK=1 SKIP_WRANGLER_AUTH_CHECK=1 bash scripts/release_preflight.sh --allow-dirty

--- a/.github/workflows/cloudflare-backend-proxy-deploy.yml
+++ b/.github/workflows/cloudflare-backend-proxy-deploy.yml
@@ -27,6 +27,14 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Validate Cloudflare free-plan proxy readiness
+        env:
+          CLOUDFLARE_BACKEND_MODE: proxy
+        run: bash scripts/check_cloudflare_free_plan_readiness.sh
+
+      - name: Validate Cloudflare edge-proxy contract
+        run: bash scripts/check_cloudflare_edge_proxy_contract.sh
+
       - name: Validate Cloudflare credentials are configured
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
