--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Sync dependencies
         run: uv sync --dev
 
+      - name: Validate Cloudflare edge-proxy contract
+        run: bash scripts/check_cloudflare_edge_proxy_contract.sh
+
       - name: Validate hardened runtime safety toggles
         env:
           PYTHONPATH: src
