--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Sync dependencies
         run: uv sync --dev
 
+      - name: Validate Cloudflare edge-proxy contract
+        run: bash scripts/check_cloudflare_edge_proxy_contract.sh
+
       - name: Run backend policy and export guard tests
         env:
           PYTHONPATH: src
