feat(cloudflare): scaffold native python worker deploy path
- add native backend worker entrypoint, wrangler config, and uv-managed python toolchain

- add native deploy workflow with source sync step and pywrangler deploy

- add sync/perf smoke scripts and migration artifact workflow tests

- enable workers.dev for frontend worker and ignore cloudflare local artifacts

Validation:

- bash -n scripts/run_cloudflare_backend_perf_smoke.sh scripts/sync_backend_cloudflare_native_source.sh

- PYTHONPATH=src uv run pytest -q tests/test_cloudflare_backend_migration_artifacts.py tests/test_cloudflare_backend_native_deploy_workflow.py tests/test_sync_backend_cloudflare_native_source_script.py

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,9 @@ scripts/ralph/archive/
 scripts/ralph/.last-branch
 frontend-web/node_modules/
 frontend-web/.next/
+frontend-web/.next.bak.*/
 frontend-web/out/
 frontend-web/coverage/
+.wrangler/
 .worktrees/
 .ai/
