--- a/frontend-web/wrangler.jsonc
+++ b/frontend-web/wrangler.jsonc
@@ -2,6 +2,7 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "immcad-frontend-web",
   "main": ".open-next/worker.js",
+  "workers_dev": true,
   "compatibility_date": "2026-02-25",
   "compatibility_flags": ["nodejs_compat"],
   "assets": {
