chore: sync pending workspace changes

--- a/frontend-web/wrangler.jsonc
+++ b/frontend-web/wrangler.jsonc
@@ -12,5 +12,8 @@
   },
   "observability": {
     "enabled": true
+  },
+  "vars": {
+    "IMMCAD_API_BASE_URL": "https://immcad-api.arkiteto.dpdns.org"
   }
 }
