--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -122,8 +122,11 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/validate_source_registry.py
 
-      - name: Validate backend-vercel source sync
-        run: uv run python scripts/validate_backend_vercel_source_sync.py
+      - name: Validate Cloudflare environment configuration
+        run: uv run python scripts/validate_cloudflare_env_configuration.py
+
+      - name: Validate backend runtime source sync
+        run: uv run python scripts/validate_backend_runtime_source_sync.py
 
       - name: Run case-law conformance (warning-only)
         env:
