--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -113,8 +113,11 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/run_jurisdictional_test_suite.py
 
-      - name: Validate backend-vercel source sync
-        run: uv run python scripts/validate_backend_vercel_source_sync.py
+      - name: Validate Cloudflare environment configuration
+        run: uv run python scripts/validate_cloudflare_env_configuration.py
+
+      - name: Validate backend runtime source sync
+        run: uv run python scripts/validate_backend_runtime_source_sync.py
 
       - name: Run case-law conformance (strict)
         env:
