--- a/backend-cloudflare/wrangler.toml
+++ b/backend-cloudflare/wrangler.toml
@@ -11,3 +11,14 @@ enabled = true
 [vars]
 ENVIRONMENT = "production"
 IMMCAD_ENVIRONMENT = "production"
+ENABLE_SCAFFOLD_PROVIDER = "false"
+ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS = "false"
+ENABLE_OPENAI_PROVIDER = "false"
+PRIMARY_PROVIDER = "gemini"
+ENABLE_CASE_SEARCH = "true"
+ENABLE_OFFICIAL_CASE_SOURCES = "true"
+CASE_SEARCH_OFFICIAL_ONLY_RESULTS = "true"
+EXPORT_POLICY_GATE_ENABLED = "true"
+DOCUMENT_REQUIRE_HTTPS = "true"
+GEMINI_MODEL = "gemini-2.5-flash-lite"
+CITATION_TRUSTED_DOMAINS = "laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org,decisions.scc-csc.ca,decisions.fct-cf.gc.ca,decisions.fca-caf.gc.ca"
