--- a/.github/workflows/cloudflare-backend-native-deploy.yml
+++ b/.github/workflows/cloudflare-backend-native-deploy.yml
@@ -1,6 +1,18 @@
 name: Cloudflare Backend Native Deploy
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - "src/immcad_api/**"
+      - "backend-cloudflare/**"
+      - "config/source_policy.yaml"
+      - "data/policy/document_compilation_rules.ca.json"
+      - "data/sources/canada-immigration/registry.json"
+      - "scripts/sync_backend_cloudflare_native_source.sh"
+      - "scripts/sync_cloudflare_backend_native_secrets.sh"
+      - ".github/workflows/cloudflare-backend-native-deploy.yml"
   workflow_dispatch:
 
 concurrency:
@@ -25,15 +37,21 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          IMMCAD_API_BEARER_TOKEN: ${{ secrets.IMMCAD_API_BEARER_TOKEN }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
-          if [ -z "${CLOUDFLARE_API_TOKEN}" ]; then
-            echo "CLOUDFLARE_API_TOKEN secret is required."
-            exit 1
-          fi
-          if [ -z "${CLOUDFLARE_ACCOUNT_ID}" ]; then
-            echo "CLOUDFLARE_ACCOUNT_ID secret is required."
-            exit 1
-          fi
+          required_vars=(
+            CLOUDFLARE_API_TOKEN
+            CLOUDFLARE_ACCOUNT_ID
+            IMMCAD_API_BEARER_TOKEN
+            GEMINI_API_KEY
+          )
+          for required_var in "${required_vars[@]}"; do
+            if [ -z "${!required_var}" ]; then
+              echo "${required_var} secret is required."
+              exit 1
+            fi
+          done
 
       - name: Sync backend runtime source for native worker
         run: bash scripts/sync_backend_cloudflare_native_source.sh
@@ -44,6 +62,23 @@ jobs:
           python3 -m pip install uv
           cd backend-cloudflare
           uv sync --dev
+
+      - name: Sync backend native worker secrets
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          IMMCAD_API_BEARER_TOKEN: ${{ secrets.IMMCAD_API_BEARER_TOKEN }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          CANLII_API_KEY: ${{ secrets.CANLII_API_KEY }}
+          REDIS_URL: ${{ secrets.REDIS_URL }}
+        run: |
+          export API_BEARER_TOKEN="${IMMCAD_API_BEARER_TOKEN}"
+          bash scripts/sync_cloudflare_backend_native_secrets.sh \
+            IMMCAD_API_BEARER_TOKEN \
+            API_BEARER_TOKEN \
+            GEMINI_API_KEY \
+            CANLII_API_KEY \
+            REDIS_URL
 
       - name: Deploy backend native Python worker
         env:
